--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,9 @@ margin-right: 93px;
 /*----------------------------Hero-------------------*/
 .hero {
     background-color: var(--background-dark);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-img.jpg);
+    max-width: 1600px;
 }
 .hero-context {
     padding-top: 200px;
