--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ ul {
     padding: 0;
 }
 .container {
-    width: 1230px;
+    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
@@ -34,8 +34,8 @@ ul {
 }
 .link {
     text-decoration: none;
-margin: 0;
-padding: 0;}
+    margin: 0;
+    padding: 0;}
 
 .visually-hidden {
     position: absolute;
@@ -50,29 +50,30 @@ padding: 0;}
     overflow: hidden;
   }
 /*---------------------Header--------------------------------*/
+.header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #ECECEC;
+    background-color: var(--contrast-color);
+}
 .header-context {
     display: flex;
     align-items: center;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    border-color: #ECECEC;
-    border-radius:1px;
 }
+.header-nav {
+    display: flex;
+    align-items: center;
 
-.header {
-    background-color: var(--contrast-color);
-}
-.header-nav .list {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-
-    display: flex;
-    align-items: center;
 }
 .logo {
-    display: block;
+    display: flex;
+    align-items: center;
+    margin-right: 93px;
+
     font-family: 'Raleway', sans-serif;
     color: #000000;
     font-weight: 700;
@@ -83,11 +84,8 @@ padding: 0;}
 .logo-accent {color:var(--accent-color);
     }
 
-.header-nav .nav-item:not(:last-child, :first-child) {
+.header-nav .nav-item:not(:last-child) {
     margin-right: 50px;
-}
-.nav-item:first-child {
-margin-right: 93px;
 }
 .header-nav .link{
     color: var(--main-title-color);  
@@ -112,7 +110,9 @@ margin-right: 93px;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    align-items: center;
 }
+
 .header-list .link:hover,
 .header-list .link:focus {
     color: var(--accent-color);
@@ -121,35 +121,55 @@ margin-right: 93px;
     padding-top: 5px;
     padding-bottom: 5px;
 }
+.item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.item-link {
+    justify-items: center;
+}
+.item-icon {
+    fill:currentColor;
+    margin-right: 10px;
+}
+.item-link:hover .item-icon, 
+.item-link:focus .item-icon {
+    fill: var(--accent-color);
+    }
 /*----------------------------Hero-------------------*/
 .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
     background-color: var(--background-dark);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/hero-img.jpg);
     max-width: 1600px;
 }
 .hero-context {
-    padding-top: 200px;
-    padding-bottom: 200px;
     text-align: center;
 }
 .hero-title {
-color: var(--contrast-color);
-font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-margin-bottom: 30px;
-max-width: 696px;
-margin-right: auto;
-margin-left: auto;
+    margin-bottom: 30px;
+    max-width: 696px;
+    margin-right: auto;
+    margin-left: auto;
+
+    color: var(--contrast-color);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
 .button {
     display: block;
     padding: 10px 32px;
     border-radius: 4px;
+    min-width: 216px;
+    margin: 0 auto;
+
     font-family:inherit;
     color: var(--contrast-color);
     background-color:var(--accent-color);
@@ -164,14 +184,13 @@ margin-left: auto;
     margin: 0 auto;
 }
 /*------------------------Our advantages-----------------------*/
-.adv-content {
+
+.advantages {
     padding-top: 94px;
     padding-right: auto;
-    padding-bottom: 118px;
+    padding-bottom: 94px;
     padding-left: auto;
-}
-.advantages {
-    background-color: var(--background-light);
+    background-color: var(--contrast-color);
 }
 .advantages-list {
     display: flex;
@@ -183,6 +202,16 @@ margin-left: auto;
 .advantages-item:not(:last-child) {
     margin-right: 30px;
 }
+.advantages-img {
+    width: 270px;
+    height: 120px;
+    background-color:#F5F4FA;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
 .advantages-title {
     color: var(--main-title-color);
     font-weight: 700;
@@ -201,11 +230,11 @@ margin-left: auto;
 }
 
 /*-----------------------------Activity-----------------------------*/
-.activity-content {
-    padding-top: 94px;
+.activity {
     padding-right: auto;
     padding-bottom: 94px;
     padding-left: auto;
+    background-color: var(--contrast-color);
 }
 .activity-title {
     margin-bottom: 50px;
@@ -226,13 +255,23 @@ margin-left: auto;
 
 /*--------------------------------Team------------------------------*/
 .team {
-    background-color: #F5F4FA;
-}
-.team-content {
     padding-top: 94px;
     padding-right: auto;
     padding-bottom: 94px;
     padding-left: auto;
+    background-color: #F5F4FA;
+}
+.team-description {
+    padding-top: 30px;
+    padding-right: auto;
+    padding-bottom: 30px;
+    padding-left: auto;
+}
+.team-content {
+    padding-top: 30px;
+    padding-right: auto;
+    padding-bottom: 30px;
+    padding-right: auto;
 }
 .team-title {
     color: var(--main-title-color);
@@ -241,53 +280,73 @@ margin-left: auto;
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 .team-list {
     display: flex;
     flex-wrap: wrap;
 }
 .team-item {
-    background-color: #fff;
+    background-color: var(--contrast-color);
     width: 270px;
-    height: 368px;
 }
 .team-item:not(:last-child) {
     margin-right: 30px;
 }
-.img-team {
-    display: block;
-    margin-bottom: 30px;
-}
+
 .member {
+    margin-bottom: 10px;
     color: var(--main-title-color);
     font-weight: 500;
     line-height: 1.19;
     letter-spacing: 0.03em;
     text-align: center;
-    margin-bottom: 10px;
 }
 .member-job {
     color: var(--main-color);
     line-height: 1.19;
     letter-spacing: 0.03em;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 16px;
 }
+.team-social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.link-social {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: var(--contrast-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon-social {
+    fill: #AFB1B8;
+}
+.link-social:hover, .link-social:focus {
+    background-color: var(--accent-color);
+}
+.link-social:hover .icon-social, .link-social:focus .icon-social {
+    fill: var(--contrast-color);
+} 
 
 /*------------------------------------------footer------------------------------*/
 footer {
-    background-color: var(--background-dark);
-}
-.footer-context {
     padding-top: 60px;
     padding-left: auto;
     padding-bottom: 60px;
     padding-right: auto;
     text-align: left;
+    background-color: var(--background-dark);
 }
-.logo {
-    display: inline-block;
+footer .logo {
+    display: block;
+    margin-bottom: 20px;
+    margin-right: 0;
     color: var(--contrast-color);
 }
 
@@ -298,9 +357,6 @@ footer {
     line-height: 1.71;
     letter-spacing: 0.03em;
     }
-.address-list {
-    margin-top: 20px;
-}
 .address-mail, .address-tel {
     color: rgba(255, 255, 255, 0.6);
     font-style: normal;
@@ -311,14 +367,18 @@ footer {
 .address-item:not(:last-child) {
     margin-bottom: 9px;
 }
+
 /*------------------------------------Portfolio-------------------------*/
+.filters {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 .filters-nav {
     display: flex;
     flex-wrap: wrap;
-    padding-top: 94px;
-    padding-bottom: 50px;
     align-items: center;
     justify-content: center;
+    margin-bottom: 50px;
 }
 .portfolio-btn {
     display: block;
@@ -331,6 +391,11 @@ footer {
     line-height: 1.62;
     text-align: center;
     letter-spacing: 0.03em;
+
+    padding-top: 6px;
+    padding-right: 22px;
+    padding-bottom: 6px;
+    padding-left: 22px;
 }
 .filters-item:not(:last-child) {
     margin-right: 8px;
@@ -339,13 +404,21 @@ footer {
     color: var(--contrast-color);
     background-color: var(--accent-color);
 }
+.project-description {
+    padding-top: 20px;
+    padding-right: 24px;
+    padding-bottom: 20px;
+    padding-left: 24px;
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
+}
 .project-title {
     color: var(--main-title-color);
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-    margin-top: 20px;
 }
 .project-type {
     color: var(--main-color);
@@ -355,7 +428,6 @@ footer {
 .projects-list {
     display: flex;
     flex-wrap: wrap;
-    padding-bottom: 94px;
     align-items: center;
     justify-content: center;
 }
@@ -363,8 +435,6 @@ footer {
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
-    border-radius: 1px;
-    border-color: #EEEEEE;
 }
 .project-item:nth-child(3n) {
     margin-right: 0;
